[gd_scene load_steps=4 format=2]

[ext_resource path="res://global/loading_screen.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.219608, 0.607843, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.219608, 0.607843, 0.196078, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.219608, 0.607843, 0.196078, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.219608, 0.607843, 0.196078, 0 )

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Foreground" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Foreground"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
custom_constants/margin_right = 150
custom_constants/margin_top = 50
custom_constants/margin_left = 150
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/MarginContainer"]
margin_left = 150.0
margin_top = 50.0
margin_right = 1130.0
margin_bottom = 670.0
grow_horizontal = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Foreground/MarginContainer/VBoxContainer"]
margin_right = 980.0
margin_bottom = 222.0
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Control" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 980.0
margin_bottom = 276.0
rect_min_size = Vector2( 0, 50 )

[node name="ressources" type="PanelContainer" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 280.0
margin_right = 980.0
margin_bottom = 436.0

[node name="ressourceLoading" type="VBoxContainer" parent="Foreground/MarginContainer/VBoxContainer/ressources"]
margin_left = 7.0
margin_top = 7.0
margin_right = 973.0
margin_bottom = 149.0

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading"]
margin_right = 966.0
margin_bottom = 14.0
text = "global.loading.loading"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading"]
margin_top = 18.0
margin_right = 966.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2

[node name="GlobalProgress" type="ProgressBar" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading"]
margin_top = 42.0
margin_right = 966.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 30 )
custom_styles/fg = SubResource( 1 )
max_value = 1.0
percent_visible = false

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading/GlobalProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingComponenet" type="Label" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading"]
margin_top = 76.0
margin_right = 966.0
margin_bottom = 90.0
align = 1
valign = 1

[node name="ProgressBar" type="ProgressBar" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading"]
margin_top = 94.0
margin_right = 966.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 30 )
custom_styles/fg = SubResource( 2 )
max_value = 1.0
step = 0.001
percent_visible = false

[node name="Label" type="Label" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0 / 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingError" type="Label" parent="Foreground/MarginContainer/VBoxContainer/ressources/ressourceLoading"]
margin_top = 128.0
margin_right = 966.0
margin_bottom = 142.0
custom_colors/font_color = Color( 0.74902, 0.243137, 0.196078, 1 )
align = 1
valign = 1

[node name="Control2" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 440.0
margin_right = 980.0
margin_bottom = 490.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1

[node name="Control3" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 494.0
margin_right = 980.0
margin_bottom = 544.0
rect_min_size = Vector2( 0, 50 )
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 548.0
margin_right = 980.0
margin_bottom = 562.0
text = "global.loading.version %s"
valign = 1

[node name="Control4" type="Control" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 566.0
margin_right = 980.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="Foreground/MarginContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 980.0
margin_bottom = 620.0
rect_min_size = Vector2( 0, 40 )

[node name="QuitButton" type="Button" parent="Foreground/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 980.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "global.loading.quit"

[node name="background" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.12244
margin_bottom = 1.12244
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerAuth" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="TimerRessource" type="Timer" parent="."]
one_shot = true
autostart = true
